--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,3 +1,14 @@
+html,
+body,
+#app,
+.container {
+  height: 100%;
+}
+
+body {
+  font-family: 'Exo 2', sans-serif, 'Times New Roman', Times, serif;
+}
+
 .container {
   width: 100%;
   margin: auto;
