--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -25,7 +25,8 @@ body {
 
 .container {
   width: 100%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 @media (min-width: 640px) {
   .container {
